Updated grid cell mapping